[workspace]
resolver = "2"
members = [
    "miden-lib",
    "miden-tx",
    "mock",
    "objects",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Miden contributors"]
homepage = "https://polygon.technology/polygon-miden"
repository = "https://github.com/0xPolygonMiden/miden-base"
exclude = [".github/"]

[profile.release]
codegen-units = 1
lto = true

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
codegen-units = 1
lto = true

[workspace.dependencies]
assembly = { package = "miden-assembly", path="../miden-vm/assembly", default-features = false }
miden-crypto = { version = "0.9", default-features = false }
miden-prover = { path="../miden-vm/prover", default-features = false }
miden-stdlib = { path="../miden-vm/stdlib", default-features = false }
miden-verifier = { package = "miden-verifier", path="../miden-vm/verifier", version = "0.9", default-features = false }
vm-core = { package = "miden-core", path="../miden-vm/core", default-features = false }
vm-processor = { package = "miden-processor", path="../miden-vm/processor", version = "0.9", default-features = false }
